--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": {
     "name": "mikehhodgson"
   },
+  "scripts": {
+    "publish": "vsce publish patch"
+  },
   "engines": {
     "vscode": "^1.31.0"
   },
@@ -31,6 +34,8 @@
     "donjayamanne.githistory",
     "DotJoshJohnson.xml",
     "esbenp.prettier-vscode",
+    "formulahendry.auto-close-tag",
+    "formulahendry.auto-rename-tag",
     "justusadam.language-haskell",
     "lfs.vscode-emacs-friendly",
     "mikehhodgson.monochrome-dark",
